--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <section class="hero section">
     <div class="hero-flex container">
         <h1 class="hero-title">EFEKTYWNE ROZWIĄZANIA <br/> DLA WASZEGO BIZNESU</h1>
-        <button class="hero-btn" type="button">Zamów usługę</button>
+        <button class="hero-btn" type="button" data-modal-open>Zamów usługę</button>
     </div>
 </section>
 <div class="upper-lorem section">
@@ -370,5 +370,16 @@
 </div>
     </footer>
 
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="close-btn" data-modal-close>
+                <svg class="close-btn-svg">
+                    <use href="./images/cross.svg#icon-Cross-modal"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 </html>
